// Vitest Snapshot v1

exports[`render > table no fields 1`] = `
"<!--report-->
## 🏆 compared action

### case1

total: 900ms
total diff: +750ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|timing|diff|
|----|----|----|
|a|160|+150|
|b|170|+150|
|c|180|+150|
|d|190|+150|
|e|200|+150|

</details>



### case2

total: 900ms
total diff: +750ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|timing|diff|
|----|----|----|
|a|160|+150|
|b|170|+150|
|c|180|+150|
|d|190|+150|
|e|200|+150|

</details>

"
`;

exports[`render > table with fields 1`] = `
"<!--report-->
## 🏆 compared action

### case1

total: 900ms
total diff: +750ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|fields|timing|diff|
|----|----|----|----|
|a|a|160|+150|
|b|b|170|+150|
|c|c|180|+150|
|d|d|190|+150|
|e|e|200|+150|

</details>



### case2

total: 900ms
total diff: +750ms

<details><summary> Toggle detail... </summary>

### 🗒️ Top 5 (diff)

|file|fields|timing|diff|
|----|----|----|----|
|a|a|160|+150|
|b|b|170|+150|
|c|c|180|+150|
|d|d|190|+150|
|e|e|200|+150|

</details>

"
`;
